k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: food-delivery
  labels:
    app: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      automountServiceAccountToken: false
      containers:
        - name: backend
          image: ghcr.io/vasanthreddylingala/food-delivery-backend:security-review
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
              name: http

          resources:
            requests:
              cpu: 200m
              memory: 512Mi

            limits:
              cpu: 500m
              memory: 1Gi

          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 60

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
